--- a/Dockerfile.elixir-ls-1.11
+++ b/Dockerfile.elixir-ls-1.11
@@ -1,10 +1,7 @@
-FROM elixir:1.11
-
-RUN mkdir /opt/elixir-ls && \
-    cd /opt/elixir-ls && \
-    wget https://github.com/elixir-lsp/elixir-ls/releases/download/v0.7.0/elixir-ls-1.11.zip && \
+FROM elixir:1.11-alpine
+WORKDIR /opt/elixir-ls && \
+RUN wget https://github.com/elixir-lsp/elixir-ls/releases/download/v0.7.0/elixir-ls-1.11.zip && \
     unzip elixir-ls-1.11.zip && \
     rm elixir-ls-1.11.zip && \
     chmod a+x *.sh
-
 ENTRYPOINT ["/opt/elixir-ls/language_server.sh"]
