--- a/bash/Dockerfile
+++ b/bash/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:current-alpine
 
-RUN npm install -g bash-language-server
+RUN npm install --global bash-language-server
 
 ENTRYPOINT ["/usr/local/bin/bash-language-server"]
