--- a/bash/Dockerfile
+++ b/bash/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:current-alpine
 
+RUN apk add bash
 RUN npm install --global bash-language-server
 
 ENTRYPOINT ["/usr/local/bin/bash-language-server"]
