--- a/bash/Makefile
+++ b/bash/Makefile
@@ -1,4 +1,4 @@
 .PHONY: bash-ls
 
 bash-ls: Dockerfile
-	docker build --tag=bash-ls:latest --file=Dockerfile .
+	docker build --tag=$@:latest --file=$< .
