Use slim image base for bash-ls

--- a/bash/Dockerfile
+++ b/bash/Dockerfile
@@ -1,6 +1,5 @@
-FROM node:current-alpine
+FROM node:current-slim
 
-RUN apk add bash
 RUN npm install --global bash-language-server
 
 ENTRYPOINT ["/usr/local/bin/bash-language-server"]
