--- a/.github/workflows/image-publish-bash-ls.yml
+++ b/.github/workflows/image-publish-bash-ls.yml
@@ -1,10 +1,11 @@
 name: Publish Bash-LS image
 
 on:
-  schedule:
-    - cron: "0 0 * * *"
+  workflow_dispatch:
   push:
     branches: [ $default-branch ]
+  schedule:
+    - cron: "0 0 * * *"
 
 jobs:
   build:
