--- a/.github/workflows/image-publish-elixir-ls.yml
+++ b/.github/workflows/image-publish-elixir-ls.yml
@@ -26,7 +26,7 @@ jobs:
           push: true
           file: elixir/Dockerfile
           tags: dockeredlsp/elixir-ls:1.12-23.3.4
-          build-args: [ ELIXIR_VER=1.12.2, OTP_VER=23.3.4 ]
+          build-args: ELIXIR_VER=1.12.2,OTP_VER=23.3.4 ]
 
       - name: Build and push 1.11 to Docker Hub
         uses: docker/build-push-action@v2
@@ -34,7 +34,7 @@ jobs:
           push: true
           file: elixir/Dockerfile
           tags: dockeredlsp/elixir-ls:1.11-23.3.4
-          build-args: [ ELIXIR_VER=1.11.2, OTP_VER=23.3.4 ]
+          build-args: ELIXIR_VER=1.11.2,OTP_VER=23.3.4
 
       - name: Build and push 1.10 to Docker Hub
         uses: docker/build-push-action@v2
@@ -42,7 +42,7 @@ jobs:
           push: true
           file: elixir/Dockerfile
           tags: dockeredlsp/elixir-ls:1.10-23.3.4
-          build-args: [ ELIXIR_VER=1.10.3, OTP_VER=23.3.4 ]
+          build-args: ELIXIR_VER=1.10.3,OTP_VER=23.3.4
 
       - name: Docker Hub Description
         uses: peter-evans/dockerhub-description@v2
