--- a/.github/workflows/image-publish-elixir-ls.yml
+++ b/.github/workflows/image-publish-elixir-ls.yml
@@ -26,7 +26,7 @@ jobs:
           push: true
           file: elixir/Dockerfile
           tags: dockeredlsp/elixir-ls:1.12-23.3.4
-          build-args: ELIXIR_VER=1.12.2,OTP_VER=23.3.4 ]
+          build-args: ELIXIR_VER=1.12.2,OTP_VER=23.3.4
 
       - name: Build and push 1.11 to Docker Hub
         uses: docker/build-push-action@v2
