Set default value for ELIXIR_LS_VER

--- a/elixir/Dockerfile
+++ b/elixir/Dockerfile
@@ -3,7 +3,7 @@ ARG OTP_VER
 ARG ALPINE_VER=3.13.3
 FROM hexpm/elixir:${ELIXIR_VER}-erlang-${OTP_VER}-alpine-${ALPINE_VER} AS build
 WORKDIR /opt/
-ARG ELIXIR_LS_VER
+ARG ELIXIR_LS_VER=0.7.0
 RUN wget https://github.com/elixir-lsp/elixir-ls/archive/refs/tags/v$ELIXIR_LS_VER.tar.gz
 RUN apk add git
 RUN tar -xf v$ELIXIR_LS_VER.tar.gz && \
